common-applications/test-environment/openeuler-software-package-server/server/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: server-ingress
  namespace: openeuler-software-pkg
spec:
  tls:
    - hosts:
        - software-pkg.test.osinfra.cn
      secretName: openeuler-software-pkg-tls
  rules:
    - host: software-pkg.test.osinfra.cn
      http:
        paths:
        - backend:
            serviceName: backend-service
            servicePort: 80
          path: /api/v1
        - backend:
            serviceName: backend-service
            servicePort: 80
          path: /swagger
